--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "nodemon"
+    "dev": "nodemon",
+    "test": "nodemon --exec ts-node src/isInside.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@turf/turf": "^7.2.0",
     "dotenv": "^16.4.7",
     "expo-server-sdk": "^3.14.0",
     "express": "^4.21.2",
